shell/shell-ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell-ms
  labels:
    app: shell-ms
spec:
  type: NodePort
  ports:
    - nodePort: 30101
      port: 3001
      targetPort: 3001
  selector:
    app: shell-ms
